# e2efast

./: README.md  pyproject.toml
.github/workflows/: python-test.yml
e2efast/: fixture_registry.py  utils.py
e2efast/cli/: main.py
e2efast/generators/: utils.py
e2efast/generators/base_templates/: header.jinja2
e2efast/generators/http/client/: generator.py
e2efast/generators/http/client/templates/: client.jinja2
e2efast/generators/http/conftest/: generator.py
e2efast/generators/http/conftest/templates/: conftest.jinja2
e2efast/generators/http/fixtures/: generator.py
e2efast/generators/http/fixtures/templates/: base.jinja2  fixture.jinja2
e2efast/generators/http/settings/: generator.py
e2efast/generators/http/settings/templates/: field.jinja2  settings.jinja2
e2efast/generators/http/tests/: generator.py
e2efast/generators/http/tests/templates/: test.jinja2
e2efast/generators/http/v2fixtures/: generator.py
e2efast/generators/http/v2fixtures/templates/: base.jinja2  fixture.jinja2  service_fixture.jinja2
e2efast/generators/http/v2tests/: generator.py
e2efast/generators/http/v2tests/templates/: service_test.jinja2
e2efast/generators/readme/: generator.py
e2efast/generators/readme/templates/: readme.md.jinja2
e2efast/http/client/: generator.py
tests/: test_example.py
