[tool.poetry]
name = "e2efast"
version = "1.0.1"
description = "Framework for fast Е2Е API testing"
authors = ["Menshikov Valeriy Sergeevich <valeriy.menshikov.1989@gmail.com>"]
readme = "README.md"
packages = [{ include = "e2efast" }]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
restcodegen = ">=2.0.1"
pydantic-settings = "^2.12.0"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.14.1,<2.0.0"
pytest = ">=8.3.5,<10.0.0"
pytest-cov = ">=6.2.1,<8.0.0"
coverage-lcov = ">=0.2.2,<1.0.0"

[tool.poetry.scripts]
e2efast = "e2efast.cli.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
